src/objects/Related_Account__c.object
<CustomObject>
    <description>Jagan 04/25/2017 - Object holds many to many relationship between Accounts.</description>
    <fields>
        <fullName>Child_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field holds the child account (Prescriber) information</description>
        <label>Child Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Prescriber, Facility, Pharmacy</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Parent Accounts</relationshipLabel>
        <relationshipName>Related_Child_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Child_Relation_Type__c</fullName>
        <description>Record type corresponding to the Child Account in the relationship.</description>
        <formula>MID(Child_Account__r.RecordType.Name, 4, LEN(Child_Account__r.RecordType.Name))</formula>
        <label>Child Relation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IQVIA_OneKeyId__c</fullName>
        <description>OneKey - Records OneKey Id</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>OneKey ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OK_Fax__c</fullName>
        <description>OneKey - Records Fax number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OK_Phone__c</fullName>
        <description>OneKey - Records Phone number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OK_Relation_End_Date__c</fullName>
        <description>OneKey - Relation end date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OK_Relation_Start_Date__c</fullName>
        <description>OneKey - Relation start date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OK_Relation_Type__c</fullName>
        <description>OneKey - Relationship Type</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relation Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OK_Relationship_Link__c</fullName>
        <description>OneKey - Relationship Link</description>
        <label>Relationship Link</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Belongs to Practice house</fullName>
                </value>
                <value>
                    <fullName>Belongs to Medical equipment group</fullName>
                </value>
                <value>
                    <fullName>Belongs to Practice / MVZ</fullName>
                </value>
                <value>
                    <fullName>Is duplicate of</fullName>
                </value>
                <value>
                    <fullName>Supplied by - DRK -</fullName>
                </value>
                <value>
                    <fullName>Belongs to Buying Group - medical</fullName>
                </value>
                <value>
                    <fullName>Belongs to Buying Group - pharma</fullName>
                </value>
                <value>
                    <fullName>Belongs to Buying Group - sanitary</fullName>
                </value>
                <value>
                    <fullName>Is affiliate of</fullName>
                </value>
                <value>
                    <fullName>Belongs to Franchise company</fullName>
                </value>
                <value>
                    <fullName>Belongs to Hospital Group - GRP -</fullName>
                </value>
                <value>
                    <fullName>Is managed by</fullName>
                </value>
                <value>
                    <fullName>Belongs to Hospitals - KLI -</fullName>
                </value>
                <value>
                    <fullName>Is affiliated to hospitals</fullName>
                </value>
                <value>
                    <fullName>Has for main workplace</fullName>
                </value>
                <value>
                    <fullName>Belongs to Group of practices</fullName>
                </value>
                <value>
                    <fullName>Is relocated to</fullName>
                </value>
                <value>
                    <fullName>Belongs to Service center</fullName>
                </value>
                <value>
                    <fullName>Belongs to Management company</fullName>
                </value>
                <value>
                    <fullName>Belongs to Interlocational union</fullName>
                </value>
                <value>
                    <fullName>Supplied by - VAB -</fullName>
                </value>
                <value>
                    <fullName>Supplied by - VAS -</fullName>
                </value>
                <value>
                    <fullName>Supplied by - VER -</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OK_Role_1__c</fullName>
        <description>OneKey - Records Role 2</description>
        <label>Role 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting Physician</fullName>
                </value>
                <value>
                    <fullName>Head of Public Health Department</fullName>
                </value>
                <value>
                    <fullName>Head of office (deputy)</fullName>
                </value>
                <value>
                    <fullName>Nursing Director (deputy)</fullName>
                </value>
                <value>
                    <fullName>Kitchen Manager</fullName>
                </value>
                <value>
                    <fullName>Head of housing</fullName>
                </value>
                <value>
                    <fullName>Freelancer</fullName>
                </value>
                <value>
                    <fullName>Pharmacie Staff</fullName>
                </value>
                <value>
                    <fullName>Admiral Doctor</fullName>
                </value>
                <value>
                    <fullName>Admiral Colonel medical officer</fullName>
                </value>
                <value>
                    <fullName>Admiral Medical officer</fullName>
                </value>
                <value>
                    <fullName>Medical head</fullName>
                </value>
                <value>
                    <fullName>Fleet doctor</fullName>
                </value>
                <value>
                    <fullName>Flotila doctor</fullName>
                </value>
                <value>
                    <fullName>Doctor General</fullName>
                </value>
                <value>
                    <fullName>Field-grade pharmacist (Military)</fullName>
                </value>
                <value>
                    <fullName>Field-grade physician (Military)</fullName>
                </value>
                <value>
                    <fullName>Colonel  Pharmacist</fullName>
                </value>
                <value>
                    <fullName>Training Doctor</fullName>
                </value>
                <value>
                    <fullName>Pharmacist (Military)</fullName>
                </value>
                <value>
                    <fullName>Medical Director (deputy)</fullName>
                </value>
                <value>
                    <fullName>Medical head (deputy)</fullName>
                </value>
                <value>
                    <fullName>Director of administration</fullName>
                </value>
                <value>
                    <fullName>Fee-based physician</fullName>
                </value>
                <value>
                    <fullName>Dean</fullName>
                </value>
                <value>
                    <fullName>Professor</fullName>
                </value>
                <value>
                    <fullName>Secretary general</fullName>
                </value>
                <value>
                    <fullName>Chairmann (deputy)</fullName>
                </value>
                <value>
                    <fullName>Manager (deputy)</fullName>
                </value>
                <value>
                    <fullName>Operations Head (deputy)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OK_Role_2__c</fullName>
        <description>OneKey - Records Role 1</description>
        <label>Role 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting Physician</fullName>
                </value>
                <value>
                    <fullName>Head of Public Health Department</fullName>
                </value>
                <value>
                    <fullName>Head of office (deputy)</fullName>
                </value>
                <value>
                    <fullName>Nursing Director (deputy)</fullName>
                </value>
                <value>
                    <fullName>Kitchen Manager</fullName>
                </value>
                <value>
                    <fullName>Head of housing</fullName>
                </value>
                <value>
                    <fullName>Freelancer</fullName>
                </value>
                <value>
                    <fullName>Pharmacie Staff</fullName>
                </value>
                <value>
                    <fullName>Admiral Doctor</fullName>
                </value>
                <value>
                    <fullName>Admiral Colonel medical officer</fullName>
                </value>
                <value>
                    <fullName>Admiral Medical officer</fullName>
                </value>
                <value>
                    <fullName>Medical head</fullName>
                </value>
                <value>
                    <fullName>Fleet doctor</fullName>
                </value>
                <value>
                    <fullName>Flotila doctor</fullName>
                </value>
                <value>
                    <fullName>Doctor General</fullName>
                </value>
                <value>
                    <fullName>Field-grade pharmacist (Military)</fullName>
                </value>
                <value>
                    <fullName>Field-grade physician (Military)</fullName>
                </value>
                <value>
                    <fullName>Colonel  Pharmacist</fullName>
                </value>
                <value>
                    <fullName>Training Doctor</fullName>
                </value>
                <value>
                    <fullName>Pharmacist (Military)</fullName>
                </value>
                <value>
                    <fullName>Medical Director (deputy)</fullName>
                </value>
                <value>
                    <fullName>Medical head (deputy)</fullName>
                </value>
                <value>
                    <fullName>Director of administration</fullName>
                </value>
                <value>
                    <fullName>Fee-based physician</fullName>
                </value>
                <value>
                    <fullName>Dean</fullName>
                </value>
                <value>
                    <fullName>Professor</fullName>
                </value>
                <value>
                    <fullName>Secretary general</fullName>
                </value>
                <value>
                    <fullName>Chairmann (deputy)</fullName>
                </value>
                <value>
                    <fullName>Manager (deputy)</fullName>
                </value>
                <value>
                    <fullName>Operations Head (deputy)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OK_Status_State__c</fullName>
        <description>OneKey - Picklist Code = STE</description>
        <label>Status State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Maternity Leave</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Is.opening</fullName>
                </value>
                <value>
                    <fullName>Reduced Activity</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Temp. Closed</fullName>
                </value>
                <value>
                    <fullName>Temp. Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OK_Status__c</fullName>
        <description>OneKey - Status like Valid, Invalid, Provisional</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Provisional</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OK_Working_Status__c</fullName>
        <description>OneKey - Records working status</description>
        <label>Working Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Market Access</fullName>
                </value>
                <value>
                    <fullName>Regular Substitute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field holds the parent account information</description>
        <label>Parent Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Facility, Hospital, Payor, Pharmacy</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Child Accounts</relationshipLabel>
        <relationshipName>Related_Parent_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Relation_Type__c</fullName>
        <description>Record type corresponding to the Parent Account in the relationship.</description>
        <formula>MID(Parent_Account__r.RecordType.Name, 4, LEN(Parent_Account__r.RecordType.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Relation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payor_Billing_Address_Full_Text__c</fullName>
        <description>Displays the full text of the address</description>
        <formula>IF(NOT(ISBLANK(Payor_Billing_Address__c)), (Payor_Billing_Address__r.Address_Line_1__c &amp; &apos;, &apos; &amp; Payor_Billing_Address__r.City__c &amp; &apos;, &apos; &amp; Payor_Billing_Address__r.Postal_Code__c &amp; &apos;, &apos; &amp; Text(Payor_Billing_Address__r.Country__c)), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payor Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payor_Billing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Billing address tied to the Payor</description>
        <label>Payor Billing Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Address__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Parent_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Address__c.Type__c</field>
                <operation>equals</operation>
                <value>Bill To</value>
            </filterItems>
            <infoMessage>Address does not belong to the Payor.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Related Accounts</relationshipLabel>
        <relationshipName>Related_Account_Payor_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <description>This field will track the preferred email</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Preferred Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Prescriber_Operations_Site_Number__c</fullName>
        <formula>Parent_Account__r.Facility_Number__c</formula>
        <label>Prescriber Operations Site Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks the primary association</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Related Account</label>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_If_Both_Med_Fac_Prescriber_Exist</fullName>
        <active>true</active>
        <description>Rule checks if both Medical Facility and Prescriber information are filled in before saving the record.</description>
        <errorConditionFormula>OR(
ISBLANK( Parent_Account__c ),
ISBLANK( Child_Account__c )
)</errorConditionFormula>
        <errorMessage>Medical Facility and Prescriber Information are Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_If_Both_Parent_Child_Exist</fullName>
        <active>true</active>
        <description>Rule checks if both Parent and Child accounts are filled in before saving the record.</description>
        <errorConditionFormula>OR( 
ISBLANK( Parent_Account__c ), 
ISBLANK( Child_Account__c ) 
)</errorConditionFormula>
        <errorMessage>Parent and Child Accounts must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_If_Parent_Child_Are_Same</fullName>
        <active>true</active>
        <description>Both child and parent accounts cannot be one and the same</description>
        <errorConditionFormula>Child_Account__c =  Parent_Account__c</errorConditionFormula>
        <errorMessage>Both Parent and Child accounts cannot be one and the same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Parent_Child_Country</fullName>
        <active>true</active>
        <description>Parent and Child account country should be the same.</description>
        <errorConditionFormula>TEXT(Child_Account__r.Country__c) !=  TEXT(Parent_Account__r.Country__c)</errorConditionFormula>
        <errorMessage>Parent and Child accounts should belong to the same country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Payor_Billing_Address_Fill</fullName>
        <active>true</active>
        <description>Payor Billing address can be selected only when there is a payor association</description>
        <errorConditionFormula>AND(
NOT(ISBLANK( Payor_Billing_Address__c )),
Parent_Relation_Type__c != &apos;Payor&apos;,
Parent_Relation_Type__c != &apos;Pharmacy&apos;
)</errorConditionFormula>
        <errorMessage>Payor Billing Address can only be selected when there is a Payor association.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Pharmacy_To_Pharmacy_Assoc</fullName>
        <active>true</active>
        <description>Pharmacy can be associated to only Pharmacy</description>
        <errorConditionFormula>OR(
AND 
(Child_Relation_Type__c = &apos;Pharmacy&apos;,
 NOT(Parent_Relation_Type__c = &apos;Pharmacy&apos;)),
AND 
(NOT(Child_Relation_Type__c = &apos;Pharmacy&apos;),
 Parent_Relation_Type__c = &apos;Pharmacy&apos;)
)</errorConditionFormula>
        <errorMessage>Pharmacy can be associated to only Pharmacy accounts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Prescriber_To_Payor_Assoc</fullName>
        <active>true</active>
        <description>Prescriber cannot be associated to Payor directly</description>
        <errorConditionFormula>AND 
(Child_Relation_Type__c = &apos;Prescriber&apos;,
 Parent_Relation_Type__c = &apos;Payor&apos;
)</errorConditionFormula>
        <errorMessage>Prescriber can be related to only Medical Facility or a Hospital.</errorMessage>
    </validationRules>
</CustomObject>